--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,4 +10,7 @@
 </ion-header>
 <ion-content padding id="page2">
   
+  <div style="position:relative;width:100%;height:-webkit-fill-available;z-index: 0;" id="map_canvas4">
+    
+  </div>
 </ion-content>
