--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,14 @@
 </ion-header>
 <ion-content padding id="page2">
   
-  <div style="position:relative;width:100%;height:-webkit-fill-available;z-index: 0;" id="map_canvas4">
+  <!-- <div style="position:relative;width:100%;height:-webkit-fill-available;z-index: 0;" id="map_canvas4"> -->
+    <h3>Ionic GoogleMaps Demo</h3>
+    <p>
+    This is a demo application of <b>@ionic-native/google-maps</b> plugin.
+    </p>
+    <div id="map_canvas">
+      <button ion-button (click)="onButtonClick($event)">Demo</button>
+    </div>
     
   </div>
 </ion-content>
