--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,6 @@
 
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
+  <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
 </body>
 </html>
