--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <link href="custom.css" rel="stylesheet">
-
+  
 </head>
 <body>
 
@@ -35,8 +34,11 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVjg3Ir9B_tbGr4a4Lt00LFUz2irioB6I"></script>
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-  <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+  
+  <!-- C:\Projects\AngularWorkspace\vehicargo\node_modules\@ionic\app-scripts\dist\dev-server\serve-config.js
+    exports.ANDROID_PLATFORM_PATH = path.join('platforms', 'android', 'app', 'src', 'main', 'assets', 'www'); -->
 </body>
 </html>
