--- a/src/pages/customer-login/customer-login.html
+++ b/src/pages/customer-login/customer-login.html
@@ -8,7 +8,7 @@
 <ion-content padding id="page8">
   <div class="spacer" style="width:300px;height:10%;" id="quickProfile-spacer4"></div>
   <form id="customerLogin-form2">
-    <img src="assets/img/I95jAVRQStG8x3fCtTOX_bucket-images.png" style="display:block;width:50%;height:auto;margin-left:auto;margin-right:auto;" />
+    <img src="assets/img/logo.png" style="display:block;width:50%;height:auto;margin-left:auto;margin-right:auto;" />
     <ion-list id="customerLogin-list6">
       <ion-item id="customerLogin-input3">
         <ion-label floating>
