--- a/src/pages/truck-login/truck-login.html
+++ b/src/pages/truck-login/truck-login.html
@@ -8,7 +8,7 @@
 <ion-content padding id="page7">
   <div class="spacer" style="width:300px;height:10%;" id="quickProfile-spacer4"></div>
   <form id="truckLogin-form1">
-    <img src="assets/img/I95jAVRQStG8x3fCtTOX_bucket-images.png" style="display:block;width:50%;height:auto;margin-left:auto;margin-right:auto;" />
+    <img src="assets/img/logo.png" style="display:block;width:50%;height:auto;margin-left:auto;margin-right:auto;" />
     <ion-list id="truckLogin-list5">
       <ion-item id="truckLogin-input1">
         <ion-label floating>
