--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVjg3Ir9B_tbGr4a4Lt00LFUz2irioB6I"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU"></script> -->
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
   
