--- a/src/pages/truck-info/truck-info.html
+++ b/src/pages/truck-info/truck-info.html
@@ -13,34 +13,36 @@
 </ion-header>
 <ion-content padding id="page15">
   
-      <ion-item color="none" id="truckInfo-list-item73">
-        Owner name : Test name
-      </ion-item>
-      <ion-item color="none" id="truckInfo-list-item74">
-        Phone : 9500450987
-      </ion-item>
       <ion-item color="none" id="truckInfo-list-item69">
-        Truck number : TN 28 AB 9876
+        <strong>Vehical name : </strong> Tata 407 
       </ion-item>
       <ion-item color="none" id="truckInfo-list-item75">
-        Truck name : Eicher
+        <strong>Dimentions : </strong> 10 X 6 X 6
       </ion-item>
       <ion-item color="none" id="truckInfo-list-item71">
-        Truck type : 6 Weel
+        <strong>  Capacity  : </strong> 2500Kgs
       </ion-item>
 
       <ion-item color="none" id="truckInfo-list-item70">
-        Truck weight : 2000Kg
+        <strong>  Base Fare  : </strong> ₹499/5Km
       </ion-item>
       <ion-item color="none" id="truckInfo-list-item72">
-        Max-load weight : 3000Kg
+        <strong>  Additional Km  : </strong> ₹49/1Km
       </ion-item>
-     
-        <ion-item id="truckInfo-toggle1">
+      <ion-item color="none" id="truckInfo-list-item72">
+        <strong>  Hire time charge  : </strong> ₹4/Minute
+      </ion-item>
+      <ion-item color="none" id="truckInfo-list-item72">
+        <strong>  Current availabe location : </strong> Chennai
+      </ion-item>
+      <ion-item color="none" id="truckInfo-list-item73">
+        <strong>Contact : </strong> : Babu / +91 9898989898
+      </ion-item>
+      <ion-item id="truckInfo-toggle1">
           <ion-label>
             Availabe
           </ion-label>
-          <ion-toggle color="positive" checked="false"></ion-toggle>
-        </ion-item>
+          <ion-toggle color="positive" checked="true"></ion-toggle>
+      </ion-item>
   
 </ion-content>
