--- a/src/pages/menus/menus.html
+++ b/src/pages/menus/menus.html
@@ -48,7 +48,7 @@
       </ion-item-options>
     </ion-item-sliding>
     <ion-item-sliding>
-      <ion-item color="none" id="menus-list-item30">
+      <ion-item color="none" id="menus-list-item30" on-click="logout()">
         <ion-icon name="power" item-left></ion-icon>
         Logout
         <ion-icon name="arrow-forward" item-right></ion-icon>
