--- a/src/pages/quick-profile/quick-profile.html
+++ b/src/pages/quick-profile/quick-profile.html
@@ -6,22 +6,28 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page9">
-  <div class="spacer" style="width:300px;height:30%;" id="quickProfile-spacer4"></div>
+  <!-- <div class="spacer" style="width:300px;height:30%;" id="quickProfile-spacer4"></div> -->
   <form id="quickProfile-form3">
     <ion-item id="quickProfile-input6">
       <ion-label floating>
         First name
       </ion-label>
-      <ion-input type="text" placeholder="First name" name="firstName"></ion-input>
+      <ion-input type="text" name="profile.firstName" [(ngModel)]="profile.firstName"></ion-input>
     </ion-item>
     <ion-item id="quickProfile-input8">
       <ion-label floating>
         Last name
       </ion-label>
-      <ion-input type="text" placeholder="Last name" name="lastName"></ion-input>
+      <ion-input type="text" name="profile.lastName" [(ngModel)]="profile.lastName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>
+        Phone
+      </ion-label>
+      <ion-input type="number" name="profile.phone" [(ngModel)]="profile.phone"></ion-input>
     </ion-item>
   </form>
-  <button id="quickProfile-button4" ion-button color="positive" block style="border-radius:0px 0px 0px 0px;" on-click="goToHome()">
+  <button id="quickProfile-button4" ion-button color="positive" block style="border-radius:0px 0px 0px 0px;" on-click="saveProfileInfo()">
     Next
   </button>
 </ion-content>
