--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -14,17 +14,17 @@
         <ion-label floating>
           Email
         </ion-label>
-        <ion-input type="text" placeholder="Email" name="credentials.email" [(ngModel)]="credentials.email"></ion-input>
+        <ion-input type="text" name="credentials.email" [(ngModel)]="credentials.email"></ion-input>
       </ion-item>
       <ion-item id="truckLogin-input2">
         <ion-label floating>
           password
         </ion-label>
-        <ion-input type="password" placeholder="password" name="credentials.password" [(ngModel)]="credentials.password"></ion-input>
+        <ion-input type="password" name="credentials.password" [(ngModel)]="credentials.password"></ion-input>
       </ion-item>
     </ion-list>
     <button ion-button color="positive" block style="border-radius:0px 0px 0px 0px;" (click)="userSignUo()">
-      Log in
+      Sign Up
     </button>
   </form>
 </ion-content>
