--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -17,55 +17,44 @@
         <ion-thumbnail item-left>
           <img />
         </ion-thumbnail>
-        <h2>
-            <strong>Babu Selvam</strong>
-        </h2>
+            <strong> {{profile.firstName}}, {{profile.lastName}}</strong>
       </ion-item>
       
       <ion-item id="profile-list-item-container5">
         <div id="profile-markdown5" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#000000;">
-            Adhar :
-            <strong>
-              markdown
-            </strong>
+            Adhar : {{profile.adhar}}
           </p>
         </div>
       </ion-item>
       <ion-item id="profile-list-item-container4">
         <div id="profile-markdown4" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#000000;">
-            Licence :
-            <strong>
-              52348754511
-            </strong>
+            Licence : {{profile.licence}} 
           </p>
         </div>
       </ion-item>
       <ion-item id="profile-list-item-container6">
         <div id="profile-markdown7" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#000000;">
-            Type :
-            <strong>
-              Heavy
-            </strong>
+            Type : {{profile.drivingType}}
           </p>
         </div>
       </ion-item>
       <ion-item color="none" id="profile-list-item37">
-        DOB : 01/01/1991
+        DOB : {{profile.dateOfBirth}}
         <ion-icon name="body" item-right></ion-icon>
       </ion-item>
       <ion-item color="none" id="profile-list-item36">
-        7 years experience
+        {{profile.experience}} years experience
         <ion-icon name="bicycle" item-right></ion-icon>
       </ion-item>
       <ion-item color="none" id="profile-list-item38">
-        babucse1991@gmail.com
+        {{profile.email}}
         <ion-icon name="mail" item-right></ion-icon>
       </ion-item>
       <ion-item color="none" id="profile-list-item39">
-        9500452761
+        {{profile.phone}}
         <ion-icon name="phone-portrait" item-right></ion-icon>
       </ion-item>
     
