--- a/src/pages/edit-truck-info/edit-truck-info.html
+++ b/src/pages/edit-truck-info/edit-truck-info.html
@@ -4,7 +4,7 @@
       Truck Info
     </ion-title>
     <ion-buttons end>
-      <button ion-button icon-left>
+      <button ion-button icon-left (click)="updateTruckInfo()">
         <ion-icon name="code"></ion-icon>
         Save
       </button>
@@ -17,49 +17,78 @@
       <ion-label floating>
         Owner name
       </ion-label>
-      <ion-input type="text" placeholder="Owner name" name="Owner name"></ion-input>
+      <ion-input type="text" name="Owner name" [(ngModel)]="truckInfo.truckName"></ion-input>
     </ion-item>
     <ion-item id="editTruckInfo-input11">
       <ion-label floating>
         Phone
       </ion-label>
-      <ion-input type="tel" placeholder="Phone" name="Phone"></ion-input>
+      <ion-input type="tel"  name="Phone" [(ngModel)]="truckInfo.phoneNumber"></ion-input>
     </ion-item>
     <ion-item id="editTruckInfo-input12">
       <ion-label floating>
         Truck number
       </ion-label>
-      <ion-input type="text" placeholder="Truck number" name="Truck number"></ion-input>
+      <ion-input type="text" name="Truck number" [(ngModel)]="truckInfo.truckumber"></ion-input>
     </ion-item>
     <ion-item id="editTruckInfo-input23">
       <ion-label floating>
         Truck type
       </ion-label>
-      <ion-input type="text" placeholder="Truck type" name="Truck type"></ion-input>
-    </ion-item>
-    <ion-item id="editTruckInfo-input21">
-      <ion-label floating>
-        Truck name
-      </ion-label>
-      <ion-input type="text" placeholder="Truck name" name="Truck name"></ion-input>
+      <ion-input type="text" name="Truck type" [(ngModel)]="truckInfo.truckType"></ion-input>
     </ion-item>
     <ion-item id="editTruckInfo-input20">
       <ion-label floating>
         Truck weight
       </ion-label>
-      <ion-input type="number" placeholder="Truck weight" name="Truck weight"></ion-input>
+      <ion-input type="number" name="Truck weight" [(ngModel)]="truckInfo.weight"></ion-input>
     </ion-item>
-    <ion-item id="editTruckInfo-input22">
+    
+    <ion-item>
       <ion-label floating>
-        Load weight
+        Dimentions
       </ion-label>
-      <ion-input type="number" placeholder="Load weight" name="Load weight"></ion-input>
+      <ion-input type="number" placeholder="width" name="width" [(ngModel)]="truckInfo.width" item-width="20px"></ion-input>
+      <ion-input type="number" placeholder="height" name="height" [(ngModel)]="truckInfo.height" item-width="20px"></ion-input>
+      <ion-input type="number" placeholder="length" name="length" [(ngModel)]="truckInfo.length" item-width="20px"></ion-input>
     </ion-item>
+
+    <ion-item>
+      <ion-label floating>
+        Base Fair (₹)
+      </ion-label>
+      <ion-input type="number" placeholder="Base Fair" [(ngModel)]="truckInfo.baseFair" item-width="20px"></ion-input>
+      <ion-input type="number" placeholder="Per Km" [(ngModel)]="truckInfo.baseFairPerKm" item-width="20px"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>
+        Time Charge (₹)
+      </ion-label>
+      <ion-input type="number" placeholder="Per Km" [(ngModel)]="truckInfo.timeCharge"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>
+        Aditional Fair (₹)
+      </ion-label>
+      <ion-input type="number" placeholder="Aditional Fair" [(ngModel)]="truckInfo.aditionalFair" item-width="20px"></ion-input>
+      <ion-input type="number" placeholder="Per Km" [(ngModel)]="truckInfo.aditionalFairPerKm" item-width="20px"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>
+        Current Location
+      </ion-label>
+      <ion-input type="text" [(ngModel)]="truckInfo.currentLocation"></ion-input>
+    </ion-item>
+
+
     <ion-item id="editTruckInfo-toggle3">
       <ion-label>
         Availabe
       </ion-label>
-      <ion-toggle color="positive" checked="false"></ion-toggle>
+      <ion-toggle color="positive" checked="false" [(ngModel)]="truckInfo.isAvailabe"></ion-toggle>
     </ion-item>
   
 </ion-content>
