--- a/src/pages/menus/menus.html
+++ b/src/pages/menus/menus.html
@@ -47,15 +47,28 @@
         <button ion-button color="positive"></button>
       </ion-item-options>
     </ion-item-sliding>
+
     <ion-item-sliding>
-      <ion-item color="none" id="menus-list-item30" on-click="logout()">
-        <ion-icon name="power" item-left></ion-icon>
-        Logout
+      <ion-item color="none" on-click="goToUploadProof()">
+        <ion-icon name="ios-book" item-left></ion-icon>
+        Upload Proof
         <ion-icon name="arrow-forward" item-right></ion-icon>
       </ion-item>
       <ion-item-options side="left">
         <button ion-button color="positive"></button>
       </ion-item-options>
     </ion-item-sliding>
+
+    <ion-item-sliding>
+        <ion-item color="none" on-click="logout()">
+          <ion-icon name="power" item-left></ion-icon>
+          Logout
+          <ion-icon name="arrow-forward" item-right></ion-icon>
+        </ion-item>
+        <ion-item-options side="left">
+          <button ion-button color="positive"></button>
+        </ion-item-options>
+    </ion-item-sliding>
+
   </ion-list>
 </ion-content>
