--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
 
   <!-- <div #gmap style="position:relative;width:100%;height:-webkit-fill-available;z-index: 0;"></div> -->
 
-
+    <button (click)="gotoSelectTruck()">Select Truck</button>
 
  
   
