--- a/src/pages/order-details/order-details.html
+++ b/src/pages/order-details/order-details.html
@@ -12,32 +12,21 @@
         <ion-avatar item-left>
           <img />
         </ion-avatar>
-        <h2>Test Driver</h2>
+        <h2>Truck name</h2>
       </ion-item>
       <ion-item color="none" id="orderDetails-list-item51">
         <ion-icon name="pin" item-left></ion-icon>
-        Chennai - Namakkal
+        TN 01 AA 1111
       </ion-item>
-      <!-- <button id="orderDetails-button9" ion-button outline color="positive" block style="border-radius:0px 0px 0px 0px;">
-        Book
-      </button> -->
+      <ion-item color="none" id="orderDetails-list-item51">
+        Transporter Id : 
+        <p item-right>TEST-ID-1234YD</p>
+      </ion-item>
+      <button id="orderDetails-button9" ion-button outline color="positive" block style="border-radius:0px 0px 0px 0px;">
+        Generate WayBill
+      </button>
       <div class="spacer" style="width:300px;height:30px;" id="quickProfile-spacer4"></div>
     </div>
-    <div>
-        <ion-item color="none" id="orderDetails-list-item50">
-          <ion-avatar item-left>
-            <img />
-          </ion-avatar>
-          <h2>Test Driver</h2>
-        </ion-item>
-        <ion-item color="none" id="orderDetails-list-item51">
-          <ion-icon name="pin" item-left></ion-icon>
-          Chennai - Namakkal
-        </ion-item>
-        <!-- <button id="orderDetails-button9" ion-button outline color="positive" block style="border-radius:0px 0px 0px 0px;">
-          Book
-        </button> -->
-        <div class="spacer" style="width:300px;height:10px;" id="quickProfile-spacer4"></div>
-      </div>
+    
   
 </ion-content>
