--- a/src/pages/order-details/order-details.html
+++ b/src/pages/order-details/order-details.html
@@ -5,28 +5,45 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page5">
+<ion-content id="page5">
   
-    <div>
-      <ion-item color="none" id="orderDetails-list-item50">
-        <ion-avatar item-left>
-          <img />
-        </ion-avatar>
-        <h2>Truck name</h2>
-      </ion-item>
-      <ion-item color="none" id="orderDetails-list-item51">
-        <ion-icon name="pin" item-left></ion-icon>
-        TN 01 AA 1111
-      </ion-item>
-      <ion-item color="none" id="orderDetails-list-item51">
-        Transporter Id : 
-        <p item-right>TEST-ID-1234YD</p>
-      </ion-item>
-      <button id="orderDetails-button9" ion-button outline color="positive" block style="border-radius:0px 0px 0px 0px;">
-        Generate WayBill
-      </button>
-      <div class="spacer" style="width:300px;height:30px;" id="quickProfile-spacer4"></div>
-    </div>
+
+  <ion-card>
+
+    <ion-item>
+        <ion-note item-right>
+            11h ago
+          </ion-note>
+      <h2>Truck Name </h2>
+      <p>November 5, 1955</p>
+    </ion-item>
+  
+    <!-- <img src="img/advance-card-bttf.png"> -->
+  
+    <ion-card-content>
+        <p> Transporter Id : TEST-ID-1234YD </p>
+        <p> Permit Id : PER-01234 </p>
+        <p> Phone number : (+91) 8754845157 </p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col center text-center>
+        <button ion-button icon-start clear>
+            <div>Upload WayBill</div>
+        </button>
+      </ion-col>
+      <ion-col center text-center>
+        <button ion-button icon-start clear>
+            <div>Pay Advance</div>
+        </button>
+      </ion-col>
+      
+    </ion-row>
+  
+  </ion-card>
+
+
+
     
   
 </ion-content>
