--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -6,19 +6,40 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page3">
-  <ion-list id="orders-list4">
-    <ion-item-sliding>
-      <ion-item color="none" on-click="goToOrderDetails()" id="orders-list-item19">
-        <ion-icon name="leaf" item-left></ion-icon>
-        MAS-CHE-09898
-        <ion-note item-right></ion-note>
-        <ion-icon name="arrow-forward" item-right></ion-icon>
-      </ion-item>
-      <ion-item-options side="left">
-        <button ion-button color="positive">
-          Swip box
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
+  
+
+
+  <ion-segment [(ngModel)]="pet">
+    <ion-segment-button value="kittens">
+      Kittens
+    </ion-segment-button>
+    <ion-segment-button value="puppies">
+      Puppies
+    </ion-segment-button>
+  </ion-segment>
+  <br>
+
+<div [ngSwitch]="pet">
+  <ion-list *ngSwitchCase="'puppies'">
+    <ion-item color="none" on-click="goToOrderDetails()" id="orders-list-item19">
+      <ion-icon name="leaf" item-left></ion-icon>
+      MAS-CHE-09898
+      <ion-note item-right></ion-note>
+      <ion-icon name="arrow-forward" item-right></ion-icon>
+    </ion-item>
+    
   </ion-list>
+
+  <ion-list *ngSwitchCase="'kittens'">
+    <ion-item>
+      <ion-thumbnail item-start>
+        <ion-icon name="rose" item-left></ion-icon>
+      </ion-thumbnail>
+      <h2>Luna</h2>
+    </ion-item>
+    
+  </ion-list>
+</div>
+
+
 </ion-content>
